// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Labelled Text 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "PTSans-Regular",
          "fontSize": 16,
        },
        undefined,
      ]
    }
  >
    Some Label!
  </Text>,
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    style={
      Array [
        Object {
          "borderBottomColor": "#333333",
          "borderBottomWidth": 1,
          "fontFamily": "OpenSans-Regular",
          "fontSize": 24,
          "marginBottom": 5,
          "marginLeft": 5,
          "marginRight": 5,
          "marginTop": 5,
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
        },
        Array [
          Object {
            "marginBottom": 30,
          },
          undefined,
        ],
      ]
    }
    underlineColorAndroid="transparent"
  />,
]
`;

exports[`Storyshots Form Unlabelled Text 1`] = `
<TextInput
  allowFontScaling={true}
  autoCapitalize="none"
  autoCorrect={false}
  style={
    Array [
      Object {
        "borderBottomColor": "#333333",
        "borderBottomWidth": 1,
        "fontFamily": "OpenSans-Regular",
        "fontSize": 24,
        "marginBottom": 5,
        "marginLeft": 5,
        "marginRight": 5,
        "marginTop": 5,
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 5,
      },
      Array [
        Object {
          "marginBottom": 30,
        },
        undefined,
      ],
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`Storyshots GeneralError with no provided message 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "backgroundColor": "#CC0000",
        "borderRadius": 15,
        "color": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "fontFamily": "OpenSans-ExtraBold",
        "fontSize": 30,
        "overflow": "hidden",
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "textAlign": "center",
      },
      undefined,
    ]
  }
>
  Error!
</Text>
`;

exports[`Storyshots GeneralError with provided message 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "backgroundColor": "#CC0000",
        "borderRadius": 15,
        "color": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "fontFamily": "OpenSans-ExtraBold",
        "fontSize": 30,
        "overflow": "hidden",
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "textAlign": "center",
      },
      undefined,
    ]
  }
>
  Something Specific...
</Text>
`;

exports[`Storyshots Screens Dashboard 1`] = `
<RCTScrollView
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
      },
      undefined,
    ]
  }
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "alignSelf": "flex-end",
            "color": "#333333",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "PTSans-Bold",
            "fontSize": 30,
            "marginBottom": 30,
          },
          undefined,
        ]
      }
    >
      Dashboard
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#333333",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "PTSans-Regular",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      User Name
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      style={
        Array [
          Object {
            "borderBottomColor": "#333333",
            "borderBottomWidth": 1,
            "fontFamily": "OpenSans-Regular",
            "fontSize": 24,
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 5,
          },
          Array [
            Object {
              "marginBottom": 30,
            },
            undefined,
          ],
        ]
      }
      underlineColorAndroid="transparent"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#333333",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "PTSans-Regular",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      Password
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      style={
        Array [
          Object {
            "borderBottomColor": "#333333",
            "borderBottomWidth": 1,
            "fontFamily": "OpenSans-Regular",
            "fontSize": 24,
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 5,
          },
          Array [
            Object {
              "marginBottom": 30,
            },
            undefined,
          ],
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
</RCTScrollView>
`;

exports[`Storyshots Title with emoji 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "alignSelf": "flex-end",
        "color": "#333333",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "fontFamily": "PTSans-Bold",
        "fontSize": 30,
        "marginBottom": 30,
      },
      undefined,
    ]
  }
>
  😀 😎 👍 💯
</Text>
`;

exports[`Storyshots Title with long text 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "alignSelf": "flex-end",
        "color": "#333333",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "fontFamily": "PTSans-Bold",
        "fontSize": 30,
        "marginBottom": 30,
      },
      undefined,
    ]
  }
>
  Some Title That Is Clearly Overly Long, Its A Fair Test Though to See How Adaptive This Is
</Text>
`;

exports[`Storyshots Title with no text 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "alignSelf": "flex-end",
        "color": "#333333",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "fontFamily": "PTSans-Bold",
        "fontSize": 30,
        "marginBottom": 30,
      },
      undefined,
    ]
  }
/>
`;

exports[`Storyshots Title with short text 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "alignSelf": "flex-end",
        "color": "#333333",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "fontFamily": "PTSans-Bold",
        "fontSize": 30,
        "marginBottom": 30,
      },
      undefined,
    ]
  }
>
  Some Title
</Text>
`;
